fix spacing issues with save UI

--- a/src/ui-components/TransformerSaveButton.css
+++ b/src/ui-components/TransformerSaveButton.css
@@ -1,7 +1,19 @@
 
+.saved-transformer-name {
+  display: block;
+}
+
+/* text box for writing purpose statement */
 .purpose-statement {
-    font-family: "Montserrat", sans-serif;
-    font-weight: 500;
-    padding: 5px;
-    resize: none;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  padding: 5px;
+  resize: none;
+  margin-top: 5px;
+  display: block;
+}
+
+.save-transformer-button {
+  margin-top: 5px;
+  display: block;
 }
